--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,6 @@ logging:
     org.springframework.security: DEBUG
     org.hibernate: ERROR
     nta.bookstore.api: DEBUG
+
+file:
+  uploadDirectory: images
