--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>nta.bookstore</groupId>
     <artifactId>api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1</version>
     <name>NTA-BookStore</name>
     <description>NTA-BookStore</description>
     <properties>
@@ -113,8 +113,8 @@
                     <version>3.8.0</version>
                     <configuration>
                         <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                        <source>17</source>
-                        <target>17</target>
+                        <source>11</source>
+                        <target>11</target>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
