--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
   profiles:
 #    active: local
     active: ${SPRING_PROFILES_ACTIVE}
+  servlet:
+    multipart:
+      enabled: true
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: false
