--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
   servlet:
     context-path: /api
-#  port: 8888
-  port: ${SPRING_PROFILES_PORT}
+  port: 8888
+#  port: ${SPRING_PROFILES_PORT}
 
 spring:
   profiles:
-#    active: local
-    active: ${SPRING_PROFILES_ACTIVE}
+    active: local
+#    active: ${SPRING_PROFILES_ACTIVE}
   servlet:
     multipart:
       enabled: true
